JVM对象创建与内存分配机制深度剖析